[package]
name = "surf-query-string"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime = "0.3.0-alpha.6"
surf = "1.0.1"
serde = {version = "1", features = ["derive"]}
